kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neumann-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neumann-api
  template:
    metadata:
      labels:
        app: neumann-api
    spec:
      containers:
      - name: neumann-api
        image: brunofagner/neumann_api:v1
        ports:
        - containerPort: 80
