kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/neumann-api-default: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: "12345678"
            - name: MONGO_INITDB_ROOT_USERNAME
              value: carlos
          image: mongo:4.4.6
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
