kubernetes/neumann-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: neumann-api
  name: neumann-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: neumann-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/neumann-api-default: "true"
        io.kompose.service: neumann-api
    spec:
      containers:
        - image: brunofagner/neumann_api:v1
          name: neumann-api
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/neumann_api
              name: neumann-api-claim0
      restartPolicy: Always
      volumes:
        - name: neumann-api-claim0
          persistentVolumeClaim:
            claimName: neumann-api-claim0
status: {}
