kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neumann-api
spec:
  selector:
    app: neumann-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
